--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "firebase": "^12.0.0",
+    "lottie-react": "^2.4.1",
     "next": "15.4.4",
     "postcss": "^8.5.6",
     "react": "19.1.0",
@@ -21,8 +23,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
     "tailwindcss": "^4.1.11",
